[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aoigrid"
version = "0.1.0"
description = "A tiny spatial hash grid for Area-of-Interest / nearest-neighbor queries. 2D & 3D, zero dependencies."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "WCN Development Co, LLC" }]
keywords = ["spatial", "grid", "aoi", "nearest-neighbor", "gamedev", "interest-management", "collision", "broad-phase"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Games/Entertainment",
]

[project.urls]
Homepage = "https://github.com/gphoenix172-droid/aoi-grid"
